Fix general spacing issues

--- a/src/app/components/content-section/index.scss
+++ b/src/app/components/content-section/index.scss
@@ -5,7 +5,7 @@
 
   .content-section-title {
     flex: 0 0 31%;
-    padding: 50px 0;
+    padding: 50px 20px 50px 0;
     position: relative;
 
     &:before {
