--- a/src/app/components/page/reset.scss
+++ b/src/app/components/page/reset.scss
@@ -24,4 +24,5 @@ ol {
 * {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
 }
